- Added "i18n_libfizmo_INVALID_VALUE_P0S_FOR_PARAMETER_P1S" parameter.  - Altered cell-interface error codes to allow new error message code    "i18n_libfizmo_INVALID_VALUE_P0S_FOR_PARAMETER_P1S" to fit in line.  - Added localized values for now parameter check error message.

--- a/src/locales/de_DE/libfizmo_i18n.txt
+++ b/src/locales/de_DE/libfizmo_i18n.txt
@@ -77,7 +77,8 @@ Signal \{0d} abgefangen, Interpreter wird abgebrochen.
 Division durch Null nicht möglich.
 Opcode JE mit nur einem Operand ist nicht gültig.
 Funktionsaufruf time() lieferte -1.
-Ubekannte Konfigurationsoption „\{0s}“.
+Unbekannte Konfigurationsoption „\{0s}“.
+Ungültiger Wert „\{0s}“ for Parameters „\{1s}“.
 Mehr
 Punkte
 Züge
