--- a/src/locales/en_US/libfizmo_i18n.txt
+++ b/src/locales/en_US/libfizmo_i18n.txt
@@ -78,6 +78,7 @@ Cannot divide by zero.
 Opcode JE with only 1 operand is illegal.
 Function call time() returned -1.
 Unknown configuration option \{0s}.
+Invalid value "\{0s}" for parameters "\{1s}".
 More
 Score
 Turns
