--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,8 +7,8 @@
    This module has been renamed from "fizmo" to "libfizmo", providing only
    the base interpreter functionality without any interface.
  - Implemented Frank Liangs TeX hy-phen-a-tion algorithm into the
-   wordwrapper. Patterns were taken from the "Object For Formatting
-   Objects" project at http://offo.sourceforge.net. Re-implemented the
+   wordwrapper. Patterns were taken from the "hyph-utf8" project at
+   http://www.ctan.org/tex-archive/language/hyph-utf8/. Re-implemented the
    word wrapper.
  - Rebuilt locales system. So far, all available locales were directly
    compiled into the binary and stored using a rather inflexible method
