--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,9 @@
 
+   Version 0.7.1
+ + 0.7.1 was finished at about (?).
+ - Fixed missing "override" statments for CFLAGS in Makefiles.
+ - Fixed $(DESTDIR) evaluation in config.[default|macports].mk.
+
    Version 0.7.0
  + 0.7.0 was finished at about Sun Sep 18 08:41:18 CEST 2011.
  - Module name change: The ncursesw- and console-interface, the sdl-sound
