--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,11 +1,11 @@
 
    Version 0.7.1
- + 0.7.1 was finished at about (?).
+ + 0.7.1 was finished at about Sun Nov 6 22:44:17 CET 2011.
  - Fixed missing "override" statments for CFLAGS in Makefiles.
  - Fixed $(DESTDIR) evaluation in config.[default|macports].mk.
  - Adapted Makefiles and configuration to use standard GNU Makefile variables
    instead of INSTALL_PATH and FIZMO_BIN_DIR.
- - Fixed an error in the stack restoreation in "opcode_restore_undo". Thanks
+ - Fixed an error in the stack restoration in "opcode_restore_undo". Thanks
    to Lewis Gentry for reporting this bug.
  - Implemented first debugger stubs. The debugger is available via network
    socket and will currently only dump PC, locals and stack contents.
