--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,8 @@
 
+   Version 0.7.2
+ + 0.7.2 was finished at about (?)
+ - Made fizmo comply to "praxix.z5" test.
+
    Version 0.7.1
  + 0.7.1 was finished at about Sun Nov 6 22:44:17 CET 2011.
  - Fixed missing "override" statments for CFLAGS in Makefiles.
