--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,7 @@
    Version 0.7.2
  + 0.7.2 was finished at about (?)
  - Made fizmo comply to "praxix.z5" test.
+ - Merged zarf's DISABLE_PREFIX_COMMANDS functionality.
 
    Version 0.7.1
  + 0.7.1 was finished at about Sun Nov 6 22:44:17 CET 2011.
