--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,8 @@
  + 0.7.2 was finished at about (?)
  - Made fizmo comply to "praxix.z5" test.
  - Merged zarf's DISABLE_PREFIX_COMMANDS functionality.
+ - Fixed missing $(DESTDIR) variable -- should already have been present
+   since version 0.7.1.
 
    Version 0.7.1
  + 0.7.1 was finished at about Sun Nov 6 22:44:17 CET 2011.
