--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,10 +4,12 @@
  - Merged Andrew Plotkin's iOS-fizmo changes: No more raw exit() calls,
    added screeninterface-specific filename prompt, new screeninterface-specific
    filename prompt replaces fizmo_register_ask_user_for_file_function, fixed
-   autosave-functionality, added "disable-stream-2-wrap" config option.
+   autosave-functionality, added "disable-stream-2-wrap" and "max-undo-steps"
+   config option and fix for an overlong property issue that made "Heist" crash.
  - Implemented memory-cleanup and fixed variable states after story end to
    allow fizmo_start() to be called repeatedly.
  - Fixed some memory leaks in the process of cleaning up.
+ - Fixed segfault which would occur after storing 10240 undo steps.
 
    Version 0.7.2
  + 0.7.2 was finished at about Fri Mar 9 21:01:12 CET 2012.
