--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,7 +1,7 @@
 
    Version 0.7.4
  + 0.7.4 was finished at about (?).
-   Implemented new build system based on autoconf/automake.
+ - Implemented new build system based on autoconf/automake.
 
    Version 0.7.3
  + 0.7.3 was finished at about Wed Aug 1 21:42:17 CEST 2012.
