--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,7 @@
 
+   Version 0.7.5
+ - Fix for preloaded input removal.
+
    Version 0.7.4
  + 0.7.4 was finished at about Mon Sep 17 22:14:52 CEST 2012.
  - Implemented new build system based on autoconf/automake.
