--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,8 @@
    Version 0.7.5
  - Fix for preloaded input removal, thanks to Lewis Gentry.
  - Fixed missing charachters in transcripts.
+ - Fixed swallowing of dots, commas and quotation marks at line starts in
+   case hyphenation is disabled -- thanks to Lewis Gentry.
 
    Version 0.7.4
  + 0.7.4 was finished at about Mon Sep 17 22:14:52 CEST 2012.
