--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,7 @@
    flag, also thanks to Lewis Gentry.
  - Colors are now correctly set for all windows on screen in case no window
    is specified for @set_colour.
+ - Re-implemented line-wrapper, fixing several issues.
 
    Version 0.7.4
  + 0.7.4 was finished at about Mon Sep 17 22:14:52 CEST 2012.
