Fix for command history memory corruption.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,7 @@
  - Colors are now correctly set for all windows on screen in case no window
    is specified for @set_colour.
  - Re-implemented line-wrapper, fixing several issues.
+ - Fix for memory corruption in command-history, thanks to Lewis Gentry.
 
    Version 0.7.4
  + 0.7.4 was finished at about Mon Sep 17 22:14:52 CEST 2012.
