--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,6 @@
 
    Version 0.7.5
+ + 0.7.5 was finished at about Fri Nov 30 14:02:28 CET 2012.
  - Fix for preloaded input removal, thanks to Lewis Gentry.
  - Fixed missing characters in transcripts.
  - Fixed swallowing of dots, commas and quotation marks at line starts in
