--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,9 @@
 
    Version 0.7.6
- - Adapted "math_h" macro name, fixing missing "rint" function declaration.
+ - Reparied "math.h" name collision, fixing missing "rint" function
+   declaration.
+ - Fixed universal builds on Mac OS X.
+ - Fixed warning in "cmd_hst" compilation.
 
    Version 0.7.5
  + 0.7.5 was finished at about Fri Nov 30 14:02:28 CET 2012.
