--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,9 @@
 
+   Version 0.7.7
+ - Fixed several compiler warnings.
+ - Altered close_interface function to allow z_mem access during shutdown.
+ - Added z_rgb_colour datatype.
+
    Version 0.7.6
  + 0.7.6 was finished at about Thu Dec 27 21:35:34 CET 2012.
  - Reparied "math.h" name collision, fixing missing "rint" function
