--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@
  - Altered close_interface function to allow z_mem access during shutdown.
  - Added z_rgb_colour datatype.
  - Renamed "install-locales" into "install-data-local" build target.
+ - Minor bugfixes.
 
    Version 0.7.6
  + 0.7.6 was finished at about Thu Dec 27 21:35:34 CET 2012.
