--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,9 @@
  - Altered close_interface function to allow z_mem access during shutdown.
  - Added z_rgb_colour datatype.
  - Renamed "install-locales" into "install-data-local" build target.
+ - Renamed getchar, getchars and ungetchars from the file system interface
+   to readchar, readchars and unreadchars. This makes fizmo compile on
+   systems where getchar() is implemented as a macro.
  - Minor bugfixes.
 
    Version 0.7.6
