--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,7 @@
 
+   Version 0.7.8
+ - Fixed compiler warning.
+
    Version 0.7.7
  + 0.7.7 was finished at about Wed Jun 5 18:49:00 CEST 2013.
  - Fixed wordwrapper for cases in which text was written on the same line as
