Several history enhancements for new scrolling.
Implemented counting of wraparounds to implement new function
"validate_outputhistory", replaces "has_wrapped".

The "validate_outputhistory" function return true if the history object
in question is still valid, false if not.

Added "rewound_paragraph_was_newline_terminated" flag so it's possible
to tell whether the last paragraph in the output has been newline-
terminated or not.

Did some code-cleanup.

--- a/src/locales/de_DE/libfizmo_i18n.txt
+++ b/src/locales/de_DE/libfizmo_i18n.txt
@@ -78,3 +78,4 @@ Funktionsaufruf time() lieferte -1.
 Unbekannte Konfigurationsoption „\{0s}“.
 Ungültiger Wert „\{0s}“ for Parameters „\{1s}“.
 Story hat Z-Versionsnummer \{0d}.
+HistoryOutput ist nicht mehr gültig.
