Added FIZMO_DIST_VERSION def to compilation.

--- a/src/locales/de_DE/libfizmo_i18n.txt
+++ b/src/locales/de_DE/libfizmo_i18n.txt
@@ -79,3 +79,4 @@ Unbekannte Konfigurationsoption „\{0s}“.
 Ungültiger Wert „\{0s}“ for Parameters „\{1s}“.
 Story hat Z-Versionsnummer \{0d}.
 HistoryOutput ist nicht mehr gültig.
+fizmo version \{0s}.
