--- a/src/locales/en_US/libfizmo_i18n.txt
+++ b/src/locales/en_US/libfizmo_i18n.txt
@@ -79,3 +79,4 @@ Unknown configuration option \{0s}.
 Invalid value "\{0s}" for parameters "\{1s}".
 Story has Z-Version number \{0d}.
 History-Output object is not longer valid.
+fizmo version \{0s}.
