--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,5 @@
 
-   Version 0.7.13
+   Version 0.7.13 -- October 8, 2016
  - Fixed a crash which occurred after entering an invalid filename for the
    /fileinput command and then re-invoking the same command. Thanks to
    Michael Baltes for reporting the problem.
