--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-libfizmo (0.7.13-1) unstable; urgency=low
+libfizmo (0.7.13-1) experimental; urgency=low
 
   * Initial release.
 
- -- Christoph Ender <christoph.ender@spellbreaker.org>  Sat, 3 Sep 2016 20:17:45 +0200
+ -- Christoph Ender <christoph.ender@spellbreaker.org>  Sat, 8 Oct 2016 23:04:32 +0200
 
