Updated changelog to reflect ITP bug number.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 libfizmo (0.7.13-1) experimental; urgency=low
 
-  * Initial release.
+  * Initial release (Closes: #842585).
 
- -- Christoph Ender <christoph.ender@spellbreaker.org>  Sat, 8 Oct 2016 23:04:32 +0200
+ -- Christoph Ender <christoph.ender@spellbreaker.org>  Sat, 30 Oct 2016 16:40:00 +0200
 
