--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libfizmo (0.7.13-2) experimental; urgency=low
+
+  * Fix breaks/replace statements and formatting issues.
+
+ -- Christoph Ender <christoph.ender@spellbreaker.org>  Tue, 22 Nov 2016 07:40:00 +0200
+ 
+
 libfizmo (0.7.13-1) experimental; urgency=low
 
   * Initial release (Closes: #842585).
