--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libfizmo (0.7.14-1) experimental; urgency=low
+
+  * New upstream version
+
+ -- Christoph Ender <christoph.ender@spellbreaker.org>  Tue, 21 Feb 2017 21:00:00 +0100
+ 
+
 libfizmo (0.7.13-2) experimental; urgency=low
 
   * Fix breaks/replace statements and formatting issues.
