--- a/src/locales/fr_FR/libfizmo_i18n.txt
+++ b/src/locales/fr_FR/libfizmo_i18n.txt
@@ -80,3 +80,5 @@ Invalid value "\{0s}" for parameters "\{1s}".
 Story has Z-Version number \{0d}.
 History-Output object is no longer valid.
 fizmo version \{0s}.
+Supplied blorb file provides no "ZCOD" chunk.
+Supplied file is not a valid Z-Machine file.
