--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libfizmo (0.7.14-2) experimental; urgency=low
+
+  * Switch to unstable.
+  * New Standards version 4.0.0.
+
+ -- Christoph Ender <christoph.ender@spellbreaker.org>  Fri, 14 Juli 2017 21:35:00 +0200
+
+
 libfizmo (0.7.14-1) experimental; urgency=low
 
   * New upstream version
