Updated for 0.7.15 release, update BSD-3 license.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+libfizmo (0.7.15-1) unstable; urgency=low
+
+  * New upstream version.
+  * Updated BSD-3 license to include contributors. License is now to 100%
+    identical to the 3-Clause BSD License.
+
+ -- Christoph Ender <christoph.ender@spellbreaker.org>  Thu, 17 Aug 2017 21:40:00 +0200
+
+
 libfizmo (0.7.14-2) unstable; urgency=low
 
   * Switch to unstable.
