--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
 libfizmo (0.7.15-2) unstable; urgency=low
 
   * Switched priority from "extra" to "optional".
+  * Updated standards version to 4.1.0.
   * Added "Vcs-Browser" and "Vcs-Git" fields to control file.
 
- -- Christoph Ender <christoph.ender@spellbreaker.org>  Mon, 12 Sep 2017 20:20:00 +0200
+ -- Christoph Ender <christoph.ender@spellbreaker.org>  Mon, 12 Sep 2017 21:40:00 +0200
 
 
 libfizmo (0.7.15-1) unstable; urgency=low
